Fix Google map size in Access page on mobile

--- a/public/stylesheets/partials/_access.scss
+++ b/public/stylesheets/partials/_access.scss
@@ -5,6 +5,12 @@
         text-align: center;
         margin-top: 2em;
         margin-bottom: 2em;
+
+        &--iFrame{
+            width: 100%;
+            height: 450px;
+            border: 0;
+        }
     }
 
     &-icon {
