--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1107,6 +1107,11 @@ a.footer-rs-instagram:active {
   margin-top: 2em;
   margin-bottom: 2em;
 }
+.access-map--iFrame {
+  width: 100%;
+  height: 450px;
+  border: 0;
+}
 .access-icon {
   color: #FDB742;
 }
